package at.htl.eventmanager.entity;

public class Enclosure {
}
